--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^2.0.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.11.0",
     "sequelize": "^6.32.1",
     "socket.io": "^4.8.1",
